HIVE-28259: Address Sonar issues (Part I)